# Rust_ws

./: .gitignore  CROSS_COMPILE_GUIDE.md  Cargo.toml  METRICS_GUIDE.md  OPTION_B_PIPELINE_DESIGN.md  PHASE4_BUG_REPORT.md  PHASE4_FIX_TESTING.md  QUICKSTART.md  README.md  WINDOWS_BUILD.md  run_gui.sh  test_validation.sh  view_live.sh  view_live_90frames.sh
examples/: split_mjpeg.rs
prj_test/: Cargo.toml
security_camera_viewer/: .gitignore  CURRENT_STATUS.md  Cargo.toml  MOTION_DETECTION_TEST_PLAN.md  MP4_RECORDING_SPEC.md  NEXT_PHASE_PLAN.md  PHASE2_20HOUR_TEST_REPORT.md  PHASE2_INTEGRATION_ANALYSIS.md  PHASE2_QUICK_GUIDE.md  PHASE3_RECORDING_SPEC.md  PHASE3_TEST_RESULTS_AND_TROUBLESHOOTING.md  PHASE4_SPEC.md  PHASE4_TEST_GUIDE.md  PHASE4_TEST_RESULTS.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_MOTION_DETECTION_SPEC.md  PHASE5_MOTION_DETECTION_TEST_RESULTS.md  PHASE6_MP4_IMPLEMENTATION_SUMMARY.md  PHASE6_TEST_RESULTS.md  PHASE7_WIFI_SPECIFICATION.md  SPRESENSE_METRICS_PROTOCOL.md  VGA_TEST_SETUP.md  WINDOWS_RELEASE_GUIDE.md  convert_to_mp4.bat  convert_to_mp4.sh
security_camera_viewer/docs/: PHASE6_ARCHITECTURE.md  PHASE7_SERVER_CLIENT_ANALYSIS.md  spresense_jpeg_diagnostics.c
security_camera_viewer/release_windows/: README.txt  connect_serial.bat  connect_tcp.bat  start_gui.bat
security_camera_viewer/src/: gui_main.rs  main.rs  metrics.rs  motion_detector.rs  mp4_recorder.rs  protocol.rs  ring_buffer.rs  serial.rs  tcp_connection.rs
src/: gui_main.rs  metrics.rs  serial.rs
